# Ello

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/screenshots/: README.md
src/: App.css  App.tsx  index.css  main.tsx  overlay.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  updater-pub.key
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  credentials.rs  errors.rs  history.rs  hotkey.rs  io.rs  lib.rs  models.rs  output.rs  polish.rs  settings.rs  stats.rs  tray.rs  vocabulary.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/transcribe/: cloud.rs  local.rs  mod.rs
src/app/: layout.tsx  router.tsx
src/components/: HotkeyCapture.tsx  HotkeyChips.tsx  MicMeter.tsx  OverlayApp.tsx  Section.tsx  Sidebar.tsx  StatusHero.tsx  ThemeProvider.tsx  TitleBar.tsx
src/components/overlay/: OverlayApp.tsx
src/components/overlay/shared/: overlayUtils.ts  useMicLevel.ts  useOverlayState.ts
src/components/overlay/styles/: CardOverlay.tsx  DotOverlay.tsx  PillOverlay.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CursorBlock.tsx  Input.tsx  Progress.tsx  Select.tsx  Switch.tsx  Toast.tsx  Wordmark.tsx  index.ts
src/lib/: events.ts  format.ts  index.ts  invoke.ts
src/pages/: About.tsx  AiPolish.tsx  Dashboard.tsx  History.tsx  Models.tsx  Onboarding.tsx  Settings.tsx  Stats.tsx  Vocabulary.tsx
src/store/: settings.ts  vocabulary.ts
