[package]
name = "ello"
version = "0.1.0"
description = "A Windows-first Tauri dictation app"
authors = ["Broski"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
thiserror = "2.0.18"
tauri-plugin-store = "2.4.3"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-autostart = "2.5.1"
cpal = "0.15.3"
rubato = "0.16.1"
hound = "3.5.1"
reqwest = { version = "0.12.15", features = ["blocking", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
enigo = "0.6.1"
arboard = "3.6.1"
sha1 = "0.10"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
whisper-rs = "0.16.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tempfile = "3.20.0"
